@@ -18,8 +18,6 @@ local strgsub = string.gsub
 local time = time
 local SecondsToTime = SecondsToTime
 local format = format
-local hashName = VanasKoS.hashName
-local splitNameRealm = VanasKoS.splitNameRealm
 local GetMapNameByID = GetMapNameByID
 local GetCursorPosition = GetCursorPosition
 local IsShiftKeyDown = IsShiftKeyDown
